--- a/README
+++ b/README
@@ -5,4 +5,5 @@ Only supports reading using foreach right now.
 
 == License
 
-Copyright 2010 Josh Ferguson, based off of libcsv with the License Below:
+Copyright 2010 Josh Ferguson, based off of libcsv which is licensed under the lgpl.
+
